@@ -18,5 +18,6 @@ prefix=@prefix@
 exec_prefix=@exec_prefix@
 libdir=@libdir@
 
-echo "warning: update-grub_lib is deprecated, use grub-mkconfig_lib instead" >&2
 . ${libdir}/grub/grub-mkconfig_lib
+
+grub_warn "update-grub_lib is deprecated, use grub-mkconfig_lib instead"
